Fixed time issue with LinearInterpolation